# ddi-prediction

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  make_figures.py  packages.txt  pyproject.toml  render.yaml  requirements-optional.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
api/: main.py
app/: streamlit_app.py
configs/: default.yaml
docs/: CYP_FINDINGS.md
scripts/: build_features.py  coldstart_ablation.py  prepare_data.py  run_pipeline.py  train.py
src/ddi/: __init__.py  engine.py
src/ddi/data/: knowledge_base.py  nlp_labeller.py  parse_drugbank.py
src/ddi/enhance/: __init__.py  calibration.py  conformal.py  metrics.py  pipeline.py  pruning.py  thresholding.py
src/ddi/evaluation/: report.py
src/ddi/explain/: explainer.py
src/ddi/features/: engineer.py  pubchem.py
src/ddi/models/: two_stage.py
tests/: test_data.py  test_enhance.py  test_extraction.py  test_models.py  test_pipeline_full.py  test_thresholding.py
