[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddi-prediction"
version = "1.0.0"
description = "5-class drug-drug interaction severity prediction using machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tanmay Agarwal" },
    { name = "Viamrsh Buyyani" },
    { name = "Yeruva Taniya Paul" },
    { name = "Vijeth M D" },
]
dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "xgboost>=1.7,<3.0",
    "shap>=0.42,<0.47",
    "imbalanced-learn>=0.11,<0.14",
    "scipy>=1.10,<2.0",
    "joblib>=1.3,<2.0",
    "rdkit>=2023.03",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.22", "httpx>=0.24", "pydantic>=2.0"]
app = ["streamlit>=1.28"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/ddi"]
omit = ["*/tests/*"]
